Added DDOLAR calculations

--- a/src/examples/bidding_info.ipynb
+++ b/src/examples/bidding_info.ipynb
@@ -38,8 +38,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\models/gib21_model/gib21-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/gib21_info_model/gib21_info-500000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/eamon/21gf/21gfc-12720000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/eamon/21gfinfo/binfo_21gfc-500000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead_model_b/lead-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lefty_model/lefty-1000000\n",
@@ -50,51 +50,60 @@
     }
    ],
    "source": [
-    "models = Models.from_conf(conf.load('./config/default.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('./config/default.conf'))  # Load sampling strategies"
+    "models = Models.from_conf(conf.load('./config/E.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('./config/E.conf'))  # Load sampling strategies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4.640977  4.00836  22.004133]]\n"
+      "c_hcp:[[7.9774933 4.6729937 9.563776 ]]\n",
+      "c_shp:[[3.1858988 2.7591014 3.6949065 3.3402452 3.5487523 3.7776444 3.8214045\n",
+      "  1.8109884 1.4541345 3.5053775 2.3037205 5.8368187]]\n"
      ]
     }
    ],
    "source": [
-    "auction = ['PAD_START', '2C']\n",
-    "n_steps = 1 + len(auction) // 4\n",
+    "auction = ['PASS', '4C', 'PASS', '5C', 'PASS', 'PASS']\n",
+    "n_steps = 1 + (len(auction)-1) // 4\n",
     "n_samples = 10\n",
     "ns = -1\n",
     "ew = -1\n",
     "nesw_i = 2\n",
     "vuln = [True, False]\n",
-    "hand = binary.parse_hand_f(32)(\"972.A4.J83.KQT74\")\n",
+    "hand = binary.parse_hand_f(32)(\"AJT85.AKT.K63.K8\")\n",
     "A = binary.get_auction_binary(n_steps, auction, nesw_i, hand, vuln, ns, ew)\n",
     "p_hcp, p_shp = models.binfo.model(A)\n",
-    "c_hcp = (lambda x: 4 * x + 10)(p_hcp.copy())\n",
-    "print(c_hcp)\n"
+    "\n",
+    "p_hcp = p_hcp.reshape((-1, n_steps, 3))[:, -1, :]\n",
+    "p_shp = p_shp.reshape((-1, n_steps, 12))[:, -1, :]\n",
+    "\n",
+    "def f_trans_hcp(x): return 4 * x + 10\n",
+    "def f_trans_shp(x): return 1.75 * x + 3.25\n",
+    "\n",
+    "p_hcp = f_trans_hcp(p_hcp)\n",
+    "p_shp = f_trans_shp(p_shp)\n",
+    "\n",
+    "c_hcp = p_hcp.copy()\n",
+    "c_shp = p_shp.copy()\n",
+    "\n",
+    "print(f\"c_hcp:{c_hcp}\")\n",
+    "print(f\"c_shp:{c_shp}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 7.044117 18.340944 10.234366]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "auction = ['PAD_START', '2C','4N']\n",
     "n_steps = 1 + len(auction) // 4\n",
@@ -112,18 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[10.73852   19.162615   7.033024 ]\n",
-      " [ 9.699156  20.89487    5.9885626]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "auction = ['PAD_START', '2C','4N','PASS']\n",
     "n_steps = 1 + len(auction) // 4\n",
